adjust: change english to indo

--- a/profile-donatur.html
+++ b/profile-donatur.html
@@ -35,7 +35,7 @@
                         <div class="home-menu-inner">
                             <img src="Assets/ic-person-circle-fill.png">
                         </div>
-                        <h6>Profile</h6>
+                        <h6>Profil</h6>
                     </div>
                 </a>
                 <br><br>
@@ -58,7 +58,7 @@
                         <div class="home-menu-transparant-inner">
                             <img src="Assets/ic-reward.png">
                         </div>
-                        <h6>Rewards</h6>
+                        <h6>Hadiah</h6>
                     </div>
                 </a>
 
@@ -102,14 +102,14 @@
                 <div class="menus">
                     <a href="profile-donatur.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                            <img src="Assets/ic-profile.png"><span class="active">Profil ></span>
                         </div>
                     </a>
                     <hr>
 
                     <a href="profile-history.html">
                         <div class="submenu">
-                            <img src="Assets/ic-history.png"><span>Donation History</span>
+                            <img src="Assets/ic-history.png"><span>Riwayat Donasi</span>
                         </div>
                     </a>
 
@@ -117,14 +117,14 @@
 
                     <a href="profile-notifications.html">
                         <div class="submenu">
-                            <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                            <img src="Assets/ic-notif-gray.png"><span>Notifikasi</span>
                         </div>
                     </a>
 
                     <hr>
                     <a href="profile-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span>Password & Security</span>
+                            <img src="Assets/ic-password.png"><span>Kata Sandi</span>
                         </div>
                     </a>
                     <hr>
@@ -133,7 +133,7 @@
 
             <div class="content" style="background-color: white;">
                 <div style="color: black;">
-                    <h1 style="font-weight: bolder;">Profile</h1>
+                    <h1 style="font-weight: bolder;">Profil</h1>
                     <div class="profile-container">
                         <div class="profile-card">
                             <img id="avatar" src="Assets/img-person.png" style="width: 160px !important; height: 160px !important;">
@@ -141,8 +141,8 @@
 
                             <br>
 
-                            <h2 style="font-weight: bolder;">Progress Level Anda</h2>
-                            <p style="text-align: center;margin-bottom: 0 !important; color: #707070;">500 exp to go</p>
+                            <h2 style="font-weight: bolder;">Level Anda</h2>
+                            <p style="text-align: center;margin-bottom: 0 !important; color: #707070;">500 poin menuju level berikutnya</p>
                             <div style="display: flex;padding: 0px 20px 20px 20px;">
                                 <div class="home-menu-transparant-progress-active">
                                     3
@@ -181,7 +181,7 @@
                             <p>0812-3456-7238</p>
                             <hr><br>
                             <a href="profile-edit.html">
-                                <button id="btn-edit-profile">Ubah Profile</button>
+                                <button id="btn-edit-profile">Ubah Profil</button>
                             </a>
                         </div>
                     </div>
