--- a/profile-edit.html
+++ b/profile-edit.html
@@ -37,7 +37,7 @@
                         <div class="home-menu-inner">
                             <img src="Assets/ic-person-circle-fill.png">
                         </div>
-                        <h6>Profile</h6>
+                        <h6>Profil</h6>
                     </div>
                 </a>
                 <br><br>
@@ -60,7 +60,7 @@
                         <div class="home-menu-transparant-inner">
                             <img src="Assets/ic-reward.png">
                         </div>
-                        <h6>Rewards</h6>
+                        <h6>Hadiah</h6>
                     </div>
                 </a>
 
@@ -104,14 +104,14 @@
                 <div class="menus">
                     <a href="profile-donatur.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                            <img src="Assets/ic-profile.png"><span class="active">Profil ></span>
                         </div>
                     </a>
                     <hr>
 
                     <a href="profile-history.html">
                         <div class="submenu">
-                            <img src="Assets/ic-history.png"><span>Donation History</span>
+                            <img src="Assets/ic-history.png"><span>Riwayat Donasi</span>
                         </div>
                     </a>
 
@@ -119,14 +119,14 @@
 
                     <a href="profile-notifications.html">
                         <div class="submenu">
-                            <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                            <img src="Assets/ic-notif-gray.png"><span>Notifikasi</span>
                         </div>
                     </a>
 
                     <hr>
                     <a href="profile-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span>Password & Security</span>
+                            <img src="Assets/ic-password.png"><span>Kata Sandi</span>
                         </div>
                     </a>
                     <hr>
