--- a/profile-change-password.html
+++ b/profile-change-password.html
@@ -37,7 +37,7 @@
                         <div class="home-menu-inner">
                             <img src="Assets/ic-person-circle-fill.png">
                         </div>
-                        <h6>Profile</h6>
+                        <h6>Profil</h6>
                     </div>
                 </a>
                 <br><br>
@@ -60,7 +60,7 @@
                         <div class="home-menu-transparant-inner">
                             <img src="Assets/ic-reward.png">
                         </div>
-                        <h6>Rewards</h6>
+                        <h6>Hadiah</h6>
                     </div>
                 </a>
 
@@ -104,14 +104,14 @@
                 <div class="menus">
                     <a href="profile-donatur.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span>Profile</span>
+                            <img src="Assets/ic-profile.png"><span>Profil</span>
                         </div>
                     </a>
                     <hr>
 
                     <a href="profile-history.html">
                         <div class="submenu">
-                            <img src="Assets/ic-history.png"><span>Donation History</span>
+                            <img src="Assets/ic-history.png"><span>Riwayat Donasi</span>
                         </div>
                     </a>
 
@@ -119,14 +119,14 @@
 
                     <a href="profile-notifications.html">
                         <div class="submenu">
-                            <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                            <img src="Assets/ic-notif-gray.png"><span>Notifikasi</span>
                         </div>
                     </a>
 
                     <hr>
                     <a href="profile-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span class="active">Password & Security ></span>
+                            <img src="Assets/ic-password.png"><span class="active">Kata Sandi ></span>
                         </div>
                     </a>
                     <hr>
@@ -135,7 +135,7 @@
 
             <div class="content" style="background-color: white;">
                 <div style="color: black; padding: 50px !important;">
-                    <h1 style="font-weight: bolder;">Ganti Password</h1>
+                    <h1 style="font-weight: bolder;">Ganti Kata Sandi</h1>
                     <br><br><br>
                     <div class="profile-container" style="display: flex !important; text-align: center !important;">
                         <div class="edit-profile-section" style="text-align: left; width:40%;">
@@ -151,7 +151,7 @@
                             <input type="text">
                             <br><br>
                                 
-                            <button id="btn-edit-profile" style="margin-top: 50px !important;">Ubah Password</button>
+                            <button id="btn-edit-profile" style="margin-top: 50px !important;">Ubah Kata Sandi</button>
                         </div>
                         <div style="width: 60%;">
                             <img src="Assets/ic-password-logo.png">
