adjust: english to indo

--- a/home-penggalang-dana.html
+++ b/home-penggalang-dana.html
@@ -45,7 +45,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -106,19 +106,19 @@
                                 <select id="sort" aria-label="Default select example" required class="px-2 py-1"
                                     style="border-radius: 6px; border-color: #4d80e4;">
                                     <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">
-                                        Charity
+                                        Amal
                                     </option>
-                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Stream
+                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Streaming
                                     </option>
                                 </select>
                             </div>
                             <div>
-                                <label for="sort" style="font-weight: bold;">Sort:</label>
+                                <label for="sort" style="font-weight: bold;">Urutkan:</label>
                                 <select id="sort" aria-label="Default select example" required class="px-2 py-1"
                                     style="border-radius: 6px; border-color: #4d80e4;">
-                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Newly
+                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Terbaru
                                     </option>
-                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Popularity
+                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Populer
                                     </option>
                                     <option value="2" style="border-radius: 6px; border-color: #4d80e4;">Status</option>
                                 </select>
@@ -163,7 +163,7 @@
 
                         <br>
 
-                        <a href="pd-detail-cirebon.html" style="text-decoration: none; color: black;">
+                        <a href="pd-detail-jakarta.html" style="text-decoration: none; color: black;">
                             <div class="charity-item">
                                 <div class="paragraph">
                                     <h2>Korban Banjir Kota Jakarta</h2>
