--- a/profile-change-password.html
+++ b/profile-change-password.html
@@ -135,7 +135,7 @@
 
             <div class="content" style="background-color: white;">
                 <div style="color: black; padding: 50px !important;">
-                    <h1 style="font-weight: bolder;">Ganti Kata Sandi</h1>
+                    <h1 style="font-weight: bolder;">Kata Sandi</h1>
                     <br><br><br>
                     <div class="profile-container" style="display: flex !important; text-align: center !important;">
                         <div class="edit-profile-section" style="text-align: left; width:40%;">
