--- a/profile-edit.html
+++ b/profile-edit.html
@@ -135,7 +135,7 @@
             
             <div class="content" style="background-color: white;">
                 <div style="color: black; padding: 50px !important;">
-                    <h1 style="font-weight: bolder;">Edit Profile</h1>
+                    <h1 style="font-weight: bolder;">Ubah Profil</h1>
                     <div class="profile-container" style="display: block !important; text-align: center !important;">
                         <div style="width: auto;">
                             <input type="file" id="imgupload" style="display:none"/> 
