--- a/profile-pd-edit.html
+++ b/profile-pd-edit.html
@@ -38,7 +38,7 @@
                         <div class="home-menu-inner">
                             <img src="Assets/ic-person-circle-fill.png">
                         </div>
-                        <h6>Profile</h6>
+                        <h6>Profil</h6>
                     </div>
                 </a>
                 <br><br>
@@ -92,21 +92,21 @@
                 <div class="menus">
                     <a href="profile-pd.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                            <img src="Assets/ic-profile.png"><span class="active">Profil ></span>
                         </div>
                     </a>
                     <hr>
 
                     <a href="profile-pd-notifications.html">
                         <div class="submenu">
-                            <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                            <img src="Assets/ic-notif-gray.png"><span>Notifikasi</span>
                         </div>
                     </a>
 
                     <hr>
                     <a href="profile-pd-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span>Password & Security</span>
+                            <img src="Assets/ic-password.png"><span>Kata Sandi</span>
                         </div>
                     </a>
                     <hr>
@@ -115,7 +115,7 @@
 
             <div class="content" style="background-color: white;">
                 <div style="color: black; padding: 50px !important;">
-                    <h1 style="font-weight: bolder;">Edit Profile</h1>
+                    <h1 style="font-weight: bolder;">Ubah Profil</h1>
                     <div class="profile-container" style="display: block !important; text-align: center !important;">
                         <div style="width: auto;">
                             <input type="file" id="imgupload" style="display:none"/> 
