--- a/profile-pd-notifications.html
+++ b/profile-pd-notifications.html
@@ -50,7 +50,7 @@
                     <div class="home-menu-inner">
                         <img src="Assets/ic-person-circle-fill.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -104,21 +104,21 @@
             <div class="menus">
                 <a href="profile-pd.html">
                     <div class="submenu">
-                        <img src="Assets/ic-profile.png"><span>Profile</span>
+                        <img src="Assets/ic-profile.png"><span>Profil</span>
                     </div>
                 </a>
                 <hr>
 
                 <a href="profile-pd-notifications.html">
                     <div class="submenu">
-                        <img src="Assets/ic-notif-gray.png"><span class="active">Notifications ></span>
+                        <img src="Assets/ic-notif-gray.png"><span class="active">Notifikasi ></span>
                     </div>
                 </a>
 
                 <hr>
                 <a href="profile-pd-change-password.html">
                     <div class="submenu">
-                        <img src="Assets/ic-password.png"><span>Password & Security</span>
+                        <img src="Assets/ic-password.png"><span>Kata Sandi</span>
                     </div>
                 </a>
                 <hr>
@@ -210,7 +210,7 @@
                         <img src="Assets/ic-arrow-gray.png"
                             style="width: 48px !important; height: 48px !important;position: relative !important; margin-top: 30px !important;">
                     </div>
-                    <div class="notification-item-read">
+                    <div class="notification-item-read" style="cursor: pointer;">
                         <div class="left-side" style="display: flex;">
                             <div
                                 style="width: 12px; height: 12px;background-color: transparent;border-radius: 50%;position: relative; top:50%;">
@@ -218,7 +218,7 @@
                             <img src="Assets/ic-reward.png" style="margin-top: 10px;position: relative; top:18%;">
                         </div>
                         <div class="paragraph-side">
-                            <h6 style="font-weight: bolder;">Reward : Saldo OVO</h6>
+                            <h6 style="font-weight: bolder;">Hadiah : Saldo OVO</h6>
                             <p>Berhasil klaim saldo OVO sebesar Rp10.000 dari donasi pertamamu</p>
                             <br>
                             <p style="margin-bottom: 0 !important;">45 menit yang lalu</p>
