--- a/profile-pd.html
+++ b/profile-pd.html
@@ -36,7 +36,7 @@
                         <div class="home-menu-inner">
                             <img src="Assets/ic-person-circle-fill.png">
                         </div>
-                        <h6>Profile</h6>
+                        <h6>Profil</h6>
                     </div>
                 </a>
                 <br><br>
@@ -90,21 +90,21 @@
                 <div class="menus">
                     <a href="profile-pd.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                            <img src="Assets/ic-profile.png"><span class="active">Profil ></span>
                         </div>
                     </a>
                     <hr>
 
                     <a href="profile-pd-notifications.html">
                         <div class="submenu">
-                            <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                            <img src="Assets/ic-notif-gray.png"><span>Notifikasi</span>
                         </div>
                     </a>
 
                     <hr>
                     <a href="profile-pd-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span>Password & Security</span>
+                            <img src="Assets/ic-password.png"><span>Kata Sandi</span>
                         </div>
                     </a>
                     <hr>
@@ -113,7 +113,7 @@
 
             <div class="content" style="background-color: white;">
                 <div style="color: black;">
-                    <h1 style="font-weight: bolder;">Profile</h1>
+                    <h1 style="font-weight: bolder;">Profil</h1>
                     <div class="profile-container">
                         <div class="profile-card">
                             <img id="avatar" src="Assets/img-person.png" style="width: 160px !important; height: 160px !important;">
