--- a/create-penggalang-dana.html
+++ b/create-penggalang-dana.html
@@ -46,7 +46,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -136,7 +136,7 @@
                                     <select class="form-select" id="kategori" aria-label="Default select example"
                                         required>
                                         <option selected>Pilih Kategori</option>
-                                        <option value="1">Charity</option>
+                                        <option value="1">Amal</option>
                                         <option value="2">Streaming</option>
                                     </select>
                                 </div>
@@ -185,14 +185,6 @@
                             </div>
                             <div class=" mb-3">
                                 <div class="col ">
-                                    <!-- <p class="label-name d-inline">Batas Waktu Donasi<span style="color: red;">*</span>
-                                    </p>
-                                    <div class="border-input p-2">
-                                        
-                                        <p class="d-inline p-3 text-grey">Pilih Tanggal</p>
-                                        <img src="Assets/eva_arrow.png" alt="arrow" class="d-inline"
-                                            style="float: right;">
-                                    </div> -->
                                     <label for="date" class="form-label mb-0">Batas Waktu Donasi<span
                                             style="color: red;">*</span></label>
                                     <input type="date" class="form-control" id="date" required>
@@ -205,7 +197,7 @@
                             <img src="Assets/Group 21.png" alt="qrCode">
                         </div>
                         <div class="col-4 vertical-center text-center">
-                            <p class="gambar-btn-1">Generate QR Code</p>
+                            <p class="gambar-btn-1">Buat QR Code</p>
                             <p class="text-btn">QR digunakan sebagai link donasi</p>
                         </div>
                     </div>
