fix: clipped web

--- a/profile-pd-notifications.html
+++ b/profile-pd-notifications.html
@@ -194,22 +194,20 @@
                             style="width: 48px !important; height: 48px !important;position: relative !important; margin-top: 30px !important;">
                     </div>
                     <hr style="margin: 0 !important;">
-                    <div class="notification-item-unread" style="cursor: pointer;">
-                        <div class="left-side" style="display: flex;">
-                            <div
-                                style="width: 12px; height: 12px;background-color: #4D80E4;border-radius: 50%;position: relative; top:50%;">
+                        <div id="tc-2" class="notification-item-unread" style="cursor: pointer;">
+                            <div class="left-side" style="display: flex;">
+                                <div id="sml-icn2" style="width: 12px; height: 12px;background-color: #4D80E4;border-radius: 50%;position: relative; top:50%;"></div>
+                                <img src="Assets/ic-rp.png" style="margin-top: 10px;position: relative; top:18%;">
                             </div>
-                            <img src="Assets/ic-rp.png" style="margin-top: 10px;position: relative; top:18%;">
+                            <div class="paragraph-side">
+                                <h6 style="font-weight: bolder;">Korban Banjir Kota Jakarta</h6>
+                                <p>Donasi dari anda sudah kami terima, kami ucapkan terima kasih</p>
+                                <br>
+                                <p style="margin-bottom: 0 !important;">25 menit yang lalu</p>
+                            </div>
+                            <img src="Assets/ic-arrow-gray.png" style="width: 48px !important; height: 48px !important;position: relative !important; margin-top: 30px !important;">
                         </div>
-                        <div class="paragraph-side">
-                            <h6 style="font-weight: bolder;">Korban Banjir Kota Jakarta</h6>
-                            <p>Donasi dari anda sudah kami terima, kami ucapkan terima kasih</p>
-                            <br>
-                            <p style="margin-bottom: 0 !important;">25 menit yang lalu</p>
-                        </div>
-                        <img src="Assets/ic-arrow-gray.png"
-                            style="width: 48px !important; height: 48px !important;position: relative !important; margin-top: 30px !important;">
-                    </div>
+                    <hr style="margin: 0 !important;">
                     <div class="notification-item-read" style="cursor: pointer;">
                         <div class="left-side" style="display: flex;">
                             <div
@@ -244,6 +242,21 @@
                     Donasi dari anda sudah kami terima, kami ucapkan terima kasih.
                     <br><br>
                     <i>2 menit yang lalu</i>
+                </p>
+            </div>
+        </div>
+
+        <div class="agreement-modal-content-2">
+            <div class="agreement-modal-content-header">
+                <button id="close-modal-button"></button>
+                <h1>Korban Banjir Kota Jakarta</h1>
+                <div style="margin: 0 auto; width: 100% !important;background-color: #e6e6e6;height: 4px;"></div>
+            </div>
+            <div class="agreement-modal-content-content">
+                <p>
+                    Donasi dari anda sudah kami terima, kami ucapkan terima kasih.
+                    <br><br>
+                    <i>25 menit yang lalu</i>
                 </p>
             </div>
         </div>
