--- a/profile-donatur.html
+++ b/profile-donatur.html
@@ -8,11 +8,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/profile-style.css">
+        <link rel="stylesheet" href="CSS/notification-style.css">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
         <script src="JS/header.js"></script>
+        <script src="JS/detail.js"></script>
 
         <title>DonateKUY</title>
     </head>
@@ -185,6 +188,28 @@
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="agreement-modal"></div>
+
+            <div class="agreement-modal-content">
+                <div class="agreement-modal-content-header">
+                    <button id="close-modal-button"></button>
+                    <h1>Deposit Saldo</h1>
+                    <div style="margin: 0 auto; width: 100% !important;background-color: #e6e6e6;height: 4px;"></div>
+                </div>
+                <div class="agreement-modal-content-content">
+                    <img src="Assets/Group 21.png">
+                    <h6><br>QRIS</h6>
+                    <p>
+                        <br>
+                        Anda dapat melakukan scan pada barcode diatas, pembayaran dapat menggunakan e-wallet apa saja 
+                        <br>(m-bca, dana, gopay, ovo, shopeepay, dll.)
+                        <br><br>
+                        <i>Dana anda akan masuk dalam 1x24 jam. <br>
+                            Jika dana belum masuk, harap hubungi customer service kami.</i>
+                    </p>
                 </div>
             </div>
 
