--- a/profile-pd.html
+++ b/profile-pd.html
@@ -8,11 +8,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/profile-style.css">
+        <link rel="stylesheet" href="CSS/notification-style.css">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
         <script src="JS/header.js"></script>
+        <script src="JS/detail.js"></script>
 
         <title>DonateKUY</title>
     </head>
@@ -152,6 +155,43 @@
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="agreement-modal"></div>
+
+            <div class="agreement-modal-content">
+                <div class="agreement-modal-content-header">
+                    <button id="close-modal-button"></button>
+                    <h1>Tarik Saldo</h1>
+                    <div style="margin: 0 auto; width: 100% !important;background-color: #e6e6e6;height: 4px;"></div>
+                </div>
+                <div class="agreement-modal-content-content">
+                    <div>
+                        <label for="sort" style="font-weight: bold;">Tipe Rekening Tujuan:</label>
+                        <select id="sort" aria-label="Default select example" required class="px-2 py-1"
+                            style="border-radius: 6px; border-color: #4d80e4;">
+                            <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Bank Central Asia (BCA)
+                            </option>
+                            <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Dana
+                            </option>
+                            <option value="2" style="border-radius: 6px; border-color: #4d80e4;">Gopay
+                            </option>
+                            <option value="3" style="border-radius: 6px; border-color: #4d80e4;">Ovo
+                            </option>
+                            <option value="4" style="border-radius: 6px; border-color: #4d80e4;">Shopee Pay
+                            </option>
+                        </select>
+                    </div>
+                    <br>
+                    <label for="name" style="color: black; font-weight: bolder; padding-bottom: 10px;">Nomor Rekening Tujuan: </label>
+                    <input type="text" style="border-radius: 7px;">
+                    <br><br><br><br>
+                    <button style="background: #4d80e4;border-radius: 8px;padding: 8px 10px;color: white;text-decoration: none;outline: none !important; border: none; width: 80%;">Tarik Saldo</button>
+                    <br><br>
+                    <i style="color: red;">*Harap pastikan bahwa nomor rekening tujuan anda sudah benar,<br>
+                        anda dapat menggunakan nomor telepon genggam anda jika tipe rekening tujuan adalah E-wallet
+                    </i>
                 </div>
             </div>
 
